# backseat

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
backseat/: __main__.py  agent.py  cli.py  config.py  dashboard.py  health.py  ssh.py
npm/: package.json
