[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backseat"
version = "0.1.0"
description = "Your phone does the work. You take the backseat."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["deploy", "android", "termux", "ssh", "cli", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

# Laptop CLI dependencies only
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "paramiko>=3",
    "httpx>=0.27",
    "pydantic>=2",
    "qrcode>=7",
]

[project.optional-dependencies]
# Phone-side agent — install with: pip install "backseat[agent]"
agent = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "psutil>=5.9",
    "qrcode>=7",
]

[project.scripts]
backseat = "backseat.cli:app"
backseat-agent = "backseat.agent:main"

[project.urls]
Homepage = "https://github.com/your-username/backseat"
Issues = "https://github.com/your-username/backseat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backseat*"]
