[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backseat"
version = "0.1.1"
description = "Your phone does the work. You take the backseat."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["deploy", "android", "termux", "ssh", "cli", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

# Shared dependencies — works on all platforms including Android/Termux
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2",
    "qrcode>=7",
]

[project.optional-dependencies]
# Phone-side agent — install with: pip install "backseat[agent]"
# Does NOT include paramiko (cryptography requires Rust to build on Android)
agent = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "psutil>=5.9",
]
# Laptop SSH deploy — install with: pip install "backseat[deploy]"
# Adds paramiko for SSH/SCP. Pre-built wheels exist on Linux/macOS/Windows.
deploy = [
    "paramiko>=3",
]

[project.scripts]
backseat = "backseat.cli:app"
backseat-agent = "backseat.agent:main"

[project.urls]
Homepage = "https://github.com/SaiNayakk/backseat"
Issues = "https://github.com/SaiNayakk/backseat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backseat*"]
